@@ -66,6 +66,7 @@ Returns:       < 0    if the string is a valid UTF-8 string
 int
 _pcre_valid_utf8(const uschar *string, int length)
 {
+#ifdef SUPPORT_UTF8
 register const uschar *p;
 
 if (length < 0)
@@ -123,6 +124,7 @@ for (p = string; length-- > 0; p++)
     if ((*(++p) & 0xc0) != 0x80) return p - string;
     }
   }
+#endif
 
 return -1;
 }
